several changes made locally..

--- a/test2/Base.lproj/Main.storyboard
+++ b/test2/Base.lproj/Main.storyboard
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aXN-WV-H1Z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aXN-WV-H1Z">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="ArialBold.ttf">
-            <string>Arial-BoldMT</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="R9c-no-8jz">
@@ -59,7 +54,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="fZs-Np-QL8" kind="show" id="HxL-U7-FRf"/>
+                                    <segue destination="fZs-Np-QL8" kind="showDetail" id="HxL-U7-FRf"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Math Farm Demo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cG-qp-WRj">
@@ -114,6 +109,7 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="toCountingLevel:" destination="fZs-Np-QL8" eventType="touchUpInside" id="M5W-Wf-f0H"/>
+                                    <segue destination="ucJ-tZ-mF5" kind="showDetail" id="vZL-mQ-GRL"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r9h-mm-sd0">
@@ -124,7 +120,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="xvl-TD-cQ0" kind="show" id="cyl-Xf-buc"/>
+                                    <segue destination="xvl-TD-cQ0" kind="showDetail" id="cyl-Xf-buc"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZNn-h5-y6U" userLabel="PatternBtn">
@@ -140,7 +136,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="eh1-ka-VaS" kind="show" id="bmk-4a-TuV"/>
+                                    <segue destination="eh1-ka-VaS" kind="showDetail" id="bmk-4a-TuV"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zab-kf-EeT">
@@ -151,6 +147,7 @@
                                 <state key="normal" title="Addition"/>
                                 <connections>
                                     <action selector="toAdditionLevel:" destination="fZs-Np-QL8" eventType="touchUpInside" id="QO8-Va-sEo"/>
+                                    <segue destination="ucJ-tZ-mF5" kind="showDetail" id="0My-gc-1Kl"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -187,7 +184,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="DxF-3k-27O" kind="show" id="MQ9-ah-Oxj"/>
+                                    <segue destination="DxF-3k-27O" kind="showDetail" id="MQ9-ah-Oxj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J8f-rb-Lmo">
@@ -237,6 +234,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LLS-XC-ZLk">
+                                <rect key="frame" x="20" y="20" width="46" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="fZs-Np-QL8" kind="showDetail" id="xuI-Yr-VZ2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.82281726759426177" green="1" blue="0.99030350291509939" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="a5n-gQ-IfL"/>
@@ -251,7 +256,7 @@
             <objects>
                 <viewController storyboardIdentifier="GameViewController1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ucJ-tZ-mF5" customClass="GameViewController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
-                        <segue destination="fZs-Np-QL8" kind="show" identifier="backToLevel" id="HXx-BY-7pG"/>
+                        <segue destination="fZs-Np-QL8" kind="showDetail" identifier="backToLevel" id="HXx-BY-7pG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldH-EI-I7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -369,6 +374,14 @@
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.077069251332482214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KRT-5h-Eak">
+                                <rect key="frame" x="20" y="20" width="57" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="eh1-ka-VaS" kind="showDetail" id="x1m-WK-pkG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.82281726759999996" green="1" blue="0.99030350290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -391,6 +404,8 @@
         <image name="thumbs_cartoon-farm-vector3" width="374" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="0My-gc-1Kl"/>
+        <segue reference="bmk-4a-TuV"/>
         <segue reference="HxL-U7-FRf"/>
         <segue reference="cyl-Xf-buc"/>
     </inferredMetricsTieBreakers>
